--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
         {% endblock %}
     </head>
     <body>
+        {% trans_default_domain 'app' %}
         <div class="container">
             {% block body %}{% endblock %}
         </div>
